--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "mongodb": "^6.3.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "preline": "^1.8.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-markdown": "^8.0.7",
+    "react-modal": "^3.16.1",
     "supports-color": "^8.1.1",
     "tailwindcss": "3.3.2"
   },
