--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.6.7",
+    "bson": "^6.3.0",
     "date-fns": "^3.3.1",
     "mongodb": "^6.3.0",
     "next": "13.4.2",
