--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "date-fns": "^3.6.0",
     "mongodb": "^6.3.0",
     "next": "^14.0.4",
     "postcss": "8.4.23",
