--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "cloudinary": "^2.4.0",
     "date-fns": "^3.6.0",
     "mongodb": "^6.3.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^14.0.4",
     "postcss": "8.4.23",
     "preline": "^1.8.0",
