--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "next": "^14.0.4",
+    "next-cloudinary": "^6.9.0",
     "postcss": "8.4.23",
     "preline": "^1.8.0",
     "react": "18.2.0",
